--- a/Static/Styles/style.css
+++ b/Static/Styles/style.css
@@ -35,9 +35,8 @@ html{
 }
 
 .img-responsive {
-  max-width: 80%;
+  max-width: 100%;
   height: auto;
-  float: right;
 }
 
 /*General Styling Ends here*/
@@ -106,6 +105,7 @@ html{
 .hero .flex-row{
 	display: flex;
 	justify-content: space-between;
+	gap: 10rem;
 	/*flex-basis: 50%;*/
 }
 
@@ -150,16 +150,137 @@ html{
 	width: 36rem;
 }
 
+/*footer styling starts here*/
 .footer{
-	margin: 6rem;
+	margin-bottom: 6rem;
 }
 
 .footer .flex-row{
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .social-links{
 	display: flex;
 	gap: 6rem;
 }
+
+/*footer styling ends here*/
+
+/*blog styling starts here*/
+
+
+.blogs {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12rem;
+}
+
+.blog-title {
+  font-family: var(--font-secondary);
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.6;
+  color: var(--color-black);
+  margin-bottom: 2.4rem;
+  margin-top: unset;
+}
+.blog-subtitle {
+  font-family: var(--font-secondary);
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.4;
+  color: var(--color-black);
+  margin-bottom: 2.4rem;
+}
+.blog-date {
+  font-family: var(--font-secondary);
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.6;
+  color: var(--color-grey);
+}
+.blog-link {
+  font-family: var(--font-secondary);
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.6;
+  color: var(--color-black);
+}
+
+.blog-paragraph {
+  font-family: var(--font-secondary);
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.4;
+  color: var(--color-black);
+  margin-bottom: 2.4rem;
+}
+
+.blog-card {
+  display: flex;
+  justify-content: space-between;
+  gap: 10rem;
+  padding-block: 10rem;
+  border-bottom: 1.5px solid var(--color-grey);
+} 
+
+.blog-card-text{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+/*blog styling ends here*/
+
+/*blog post styling starts here*/
+.blog-img{
+	/*margin-top: 10rem;*/
+	margin-bottom: 5rem;
+}
+
+.blog-detail{
+	border-bottom: 1.5px solid var(--color-grey);
+	padding-block: 10rem;
+	margin-bottom: 10rem;
+}
+/*blog post styling ends here*/
+
+/*contact page styling starts*/
+
+.contact{
+	margin-bottom: 10rem;
+}
+.contact-container{
+	max-width: 60rem;
+	margin: 0 auto;
+	background-color: #EAEAEA;
+	padding: 2rem;
+}
+
+
+input{
+	font-size: 20px;
+	line-height: 25px;
+	width: 100%;
+}
+
+
+#area{
+	width: 100%;
+	height: 35vh;
+}
+
+
+#sendMessage{
+	width: 100%;
+	height: 2.6rem;
+	background-color: #FFAB4C;
+	border-style=none;
+}
+
+.contact .nav-logo{
+	text-align: center;
+	margin: 2rem 0 0 0;
+}
+
