--- a/Templates/blog-detail.html
+++ b/Templates/blog-detail.html
@@ -27,7 +27,7 @@
 			<div class="container">
 				<div class="blog-detail">
 					<div class="blog-img">
-						<img src="../Static/Images/server2.jpg" alt="" class="img-responsive">
+						<img src="../Static/Images/forest.jpg" alt="" class="blog-post-img">
 					</div>
 					<div class="blog-text-info">
     					<h4 class="blog-title">Web Servers</h4>
