--- a/Templates/blog.html
+++ b/Templates/blog.html
@@ -25,13 +25,12 @@
 			</div>
 		</nav>
 		</div>
-		
 	</header>
 
 	<main>
 		<section class="section-blogs">
 			<div class="container">
-	          <h1 class="heading-primary">My Recent blogs &DownArrow;</h1>
+	          <h1 class="heading-primary margin-unset">My Recent blogs &DownArrow;</h1>
 	        </div>
 	        <div class="container">
 	        	<div class="blogs">
@@ -47,37 +46,37 @@
 	        				</div>
 	        			</div>
 	        			<div class="blog-card-img">
-	        				<img src="../Static/Images/server2.jpg" alt="" class="img-responsive">
+	        				<img src="../Static/Images/forest.jpg" alt="" class="blog-card-img">
 	        			</div>
 	        		</div>
 	        		<div class="blog-card">
 	        			<div class="blog-card-text">
 	        				<div class="blog-text-info">
-	        					<h4 class="blog-title">Web Servers</h4>
-	        					<p class="blog-subtitle">Web servers are programs that provide documents to requesting browsers identified using URLs. Servers are slave Program.</p>
+	        					<h4 class="blog-title">Computational Simulation</h4>
+	        					<p class="blog-subtitle">A computational simulation is a dynamic, process-oriented model instantiated on a computer. These can range from traditional economic models (expressed as equations) to more abstract constructs and processes.</p>
 	        					<span class="blog-date">1 March 2022</span>
 	        				</div>
 	        				<div class="blog-link-info">
-	        					<a href="blog-detail.html" class="blog-link">>Read more about this blog. &nearr;</a>
+	        					<a href="simulation.html" class="blog-link">>Read more about this blog. &nearr;</a>
 	        				</div>
 	        			</div>
 	        			<div class="blog-card-img">
-	        				<img src="../Static/Images/server2.jpg" alt="" class="img-responsive">
+	        				<img src="../Static/Images/tiger2.jpg" alt="" class="blog-card-img">
 	        			</div>
 	        		</div>
 	        		<div class="blog-card">
 	        			<div class="blog-card-text">
 	        				<div class="blog-text-info">
-	        					<h4 class="blog-title">Web Servers</h4>
-	        					<p class="blog-subtitle">Web servers are programs that provide documents to requesting browsers identified using URLs. Servers are slave Program.</p>
+	        					<h4 class="blog-title">Lorem Ipsum</h4>
+	        					<p class="blog-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Feugiat in fermentum posuere urna nec tincidunt praesent semper.</p>
 	        					<span class="blog-date">1 March 2022</span>
 	        				</div>
 	        				<div class="blog-link-info">
-	        					<a href="blog-detail.html" class="blog-link">>Read more about this blog. &nearr;</a>
+	        					<a href="lorem-ipsum.html" class="blog-link">>Read more about this blog. &nearr;</a>
 	        				</div>
 	        			</div>
 	        			<div class="blog-card-img">
-	        				<img src="../Static/Images/server2.jpg" alt="" class="img-responsive">
+	        				<img src="../Static/Images/forest3.jpg" alt="" class="blog-card-img">
 	        			</div>
 	        		</div>
 	        	</div>
