--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>My portfolio</title>
-	<link rel="stylesheet" type="text/css" href="./Static/Styles/style.css">
-	
+	<link rel="stylesheet" type="text/css" href="../Static/Styles/style.css">
+	<style>
+		@media (max-width: 34rem){
+			body{
+				background-color: red;
+			}
+		}
+	</style>
 </head>
 <body>
 	<header class="header">
@@ -14,8 +17,8 @@
 			<nav class="nav">
 			<a href="#" class="nav-logo">Kamal.</a>
 			<div class="nav-links">
-				<a class="nav-link" href="Templates/blog.html">Blogs</a>
-				<a class="nav-link" href="./Templates/contact.html">Contact</a>
+				<a class="nav-link" href="./blog.html">Blogs</a>
+				<a class="nav-link" href="./contact.html">Contact</a>
 			</div>
 		</nav>
 		</div>
@@ -39,7 +42,7 @@
 					</div>
 					<div class="column">
 						<img
-			                src="Static/Images/kamallc.jpeg"
+			                src="../Static/Images/kamallc.jpeg"
 			                alt=""
 			                class="img-responsive"
 			              />
