--- a/Static/Styles/style.css
+++ b/Static/Styles/style.css
@@ -314,9 +314,14 @@ input{
 
 /*for mobiles 544px*/
 @media (max-width: 59rem){
-  .container {
+  /* .container {
     max-width: 75rem;
+  } */
+
+  .img-responsive{
+    width: -webkit-fill-available;
   }
+
   .nav{
     margin-block: 4rem;
   }
@@ -331,6 +336,10 @@ input{
   .paragraph-primary{
     font-size: 2.4rem;
   }
+  .hero .column:nth-child(1){
+    width: unset;
+  }
+
   .skill .flex-row{
     gap: unset;
     align-items: start;
@@ -351,7 +360,7 @@ input{
   }
 
   .social-links{
-    gap: 10rem;
+    gap: 7rem;
   }
 
   
@@ -365,6 +374,12 @@ input{
   /* .container {
     max-width: 40rem;
   } */
+
+
+  .img-responsive{
+    width: -webkit-fill-available;
+  }
+  
   .nav {
     margin-block: 2rem;
   }
